--- a/DatingApp/client/src/index.html
+++ b/DatingApp/client/src/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Client</title>
+  <title>🍻 Best Class Yet 😉</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h1>hello Angular</h1>
   <app-root></app-root>
 </body>
 </html>
